tests/errors/missing_colons_init.f90
program missing_colons_init
    implicit none
    integer :: p, q = 1, r
    integer :: a = 1, b, c = 1
    integer :: d, e, f = 1
    integer n = 1 ! bad syntax
end program missing_colons_init
